[package]
name = "client"
version = "1.0.0"
authors = ["KunoiSayami <46131041+KunoiSayami@users.noreply.github.com>"]
edition = "2018"

[dependencies]
auth = { path = "../auth" }
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = [
    "http2",
    "json",
    "blocking",
] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
types = { path = "../types" }
