[package]
name = "server"
version = "2.0.0"
authors = ["KunoiSayami <46131041+KunoiSayami@users.noreply.github.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
auth = { path = "../auth" }
axum = { version = "0.7", features = ["http2", "macros", "ws"] }
base64 = "0.22"
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
types = { path = "../types" }
webbrowser = "1"
